--- a/src/App.css
+++ b/src/App.css
@@ -7,17 +7,40 @@
   font-family: "source-sans-pro", sans-serif;
 }
 
+h1 {
+  text-align: left;
+  font-size: 90px;
+  font-weight: 900;
+  letter-spacing: 0px;
+  color: #000000;
+  text-shadow: 0px 16px 21px #00000029;
+  text-transform: capitalize;
+  line-height: 105px;
+}
+
+h2 {
+  text-align: left;
+  font-size: 28px;
+  font-weight: normal;
+  letter-spacing: 0px;
+  color: #7d7d7d;
+}
+
+button {
+  cursor: pointer;
+}
+
 #mekong-tour {
   max-width: 1920px;
   margin: 0 auto;
   display: flex;
+  position: relative;
 }
 
 /* tour socials */
 
 .tour__socials {
   width: 50%;
-  position: relative;
 }
 
 .img__wrapper {
@@ -36,12 +59,11 @@
   height: 141px;
   top: 68px;
   left: 727px;
-  padding: 8px 0 17px 21px;
+  padding-left: 21px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
 }
-
 
 .window__info--para {
   font-size: 38px;
@@ -93,14 +115,13 @@
   opacity: 1;
   border: none;
   text-decoration: none;
-  
 }
 
 .social__link::after {
   content: "Lorem Ipsum";
   display: none;
   letter-spacing: 0px;
-  color: #FFFFFF;
+  color: #ffffff;
   text-transform: capitalize;
   font-size: 26px;
   margin-left: 25px;
@@ -148,4 +169,131 @@
   color: #789376;
   letter-spacing: 0;
   line-height: 33px;
+}
+
+/* TOUR INFO */
+
+.tour__info {
+  width: 50%;
+}
+
+.green {
+  text-align: left;
+  font-size: 84px;
+  font-weight: bold;
+  letter-spacing: 0px;
+  color: #0d9206;
+  text-shadow: 0px 16px 21px #00000029;
+  text-transform: capitalize;
+  position: absolute;
+  top: 247px;
+  left: 1344px;
+  width: 331px;
+  height: 112px;
+}
+
+.tour__info--btn {
+  background-color: #ff8800;
+  color: #ffffff;
+  font-size: 27px;
+  border: none;
+  padding: 12px 44px;
+  cursor: pointer;
+  position: absolute;
+  top: 586px;
+  left: 1048px;
+  transition: all 300ms;
+}
+
+.tour__info--btn:hover {
+  background-color: #ffaa33;
+  transform: scale(1.1);
+}
+
+.divider__vertical {
+  position: absolute;
+  top: 374px;
+  left: 1012px;
+  width: 0px;
+  height: 273px;
+  border: 2px solid #0d9206;
+}
+
+.grid {
+  position: absolute;
+  top: 231px;
+  left: 1820px;
+}
+
+.tour__info--heading {
+  position: absolute;
+  top: 37px;
+  left: 1048px;
+  width: 317px;
+  height: 338px;
+}
+
+.tour__info--subheading {
+  position: absolute;
+  top: 380px;
+  left: 1048px;
+  width: 665px;
+  height: 167px;
+}
+
+.slider__content {
+  position: absolute;
+  top: 715px;
+  left: 1011px;
+  width: 909px;
+  overflow: hidden;
+}
+
+.slide {
+  width: 365px;
+  
+}
+
+.control__buttons {
+  display: flex;
+  align-items: center;
+  
+}
+
+.slider__btn--text {
+  color: #0d9206;
+  font-size: 26px;
+  background-color: #ffffff;
+  opacity: 0.79;
+  border-radius: 56px;
+  border: none;
+  margin-right: 12px;
+  box-shadow: 5px 0px 7px #00000029;
+  padding: 12px 23px;
+  position: absolute;
+  top: 819px;
+  left: 1567px;
+  z-index: 100;
+}
+
+.slider__btn--arrow {
+  width: 60px;
+  height: 60px;
+  background-color: #ffffff;
+  opacity: 0.79;
+  box-shadow: 5px 0px 7px #00000029;
+  color: #0d9206;
+  border-radius: 100%;
+  border: none;
+  position: absolute;
+  top: 819px;
+left: 1810px;
+z-index: 100;
+  
+
+}
+
+.fa-arrow-right {
+  width: 32px;
+  height: 32px;
 }
