--- a/src/App.css
+++ b/src/App.css
@@ -34,19 +34,19 @@ button {
   max-width: 1920px;
   margin: 0 auto;
   display: flex;
-  position: relative;
+  
 }
 
 /* tour socials */
 
 .tour__socials {
   width: 50%;
+  position: relative;
+  animation: slideInFromLeft 1s ease-in;;
 }
 
 .img__wrapper {
-  position: absolute;
-  top: -103.52520751953125px;
-  left: 35px;
+  object-fit: contain;
 }
 
 .window__info {
@@ -57,8 +57,8 @@ button {
   opacity: 1;
   width: 289px;
   height: 141px;
-  top: 68px;
-  left: 727px;
+  top: 170px;
+  right: 0;
   padding-left: 21px;
   display: flex;
   flex-direction: column;
@@ -89,7 +89,7 @@ button {
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 247px;
+  top: 340px;
   left: 35px;
 }
 
@@ -156,12 +156,25 @@ button {
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: 813px;
-  left: 35px;
+  top: 890px;
+  left: 10px;
 }
 
 .more-trips__wrapper {
   margin-right: 27px;
+  
+}
+
+.more-trips__link {
+  transition: transform ease 300ms;
+}
+
+.more-trips__link:hover {
+  transform: scale(1.1);
+}
+
+.more-trips__link:active {
+  transform: scale(0.8);
 }
 
 .more-tips__para {
@@ -175,6 +188,27 @@ button {
 
 .tour__info {
   width: 50%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  animation: slideInFromRight 1s ease-in;
+}
+
+.tour__info--text {
+  margin-left: 32px;
+}
+
+.tour__info--heading {
+  width: 100%;
+  max-width: 338px;
+  margin-top: 112px;
+}
+
+.tour__info--subheading {
+  width: 100%;
+  max-width: 665px;
+  margin-top: 24px
 }
 
 .green {
@@ -185,23 +219,16 @@ button {
   color: #0d9206;
   text-shadow: 0px 16px 21px #00000029;
   text-transform: capitalize;
-  position: absolute;
-  top: 247px;
-  left: 1344px;
-  width: 331px;
-  height: 112px;
+  margin-left: 72px;
 }
 
 .tour__info--btn {
   background-color: #ff8800;
   color: #ffffff;
   font-size: 27px;
+  margin: 38px 0;
   border: none;
   padding: 12px 44px;
-  cursor: pointer;
-  position: absolute;
-  top: 586px;
-  left: 1048px;
   transition: all 300ms;
 }
 
@@ -210,54 +237,39 @@ button {
   transform: scale(1.1);
 }
 
+.tour__info--btn:active {
+  transform: scale(0.8);
+}
+
 .divider__vertical {
   position: absolute;
-  top: 374px;
-  left: 1012px;
+  top: 60%;
+  left: 0;
   width: 0px;
   height: 273px;
   border: 2px solid #0d9206;
+  transform: translateY(-60%);
 }
 
 .grid {
   position: absolute;
-  top: 231px;
-  left: 1820px;
+  top: 60%;
+  right: 0;
+  transform: translateY(-60%);
 }
 
-.tour__info--heading {
-  position: absolute;
-  top: 37px;
-  left: 1048px;
-  width: 317px;
-  height: 338px;
-}
-
-.tour__info--subheading {
-  position: absolute;
-  top: 380px;
-  left: 1048px;
-  width: 665px;
-  height: 167px;
-}
 
 .slider__content {
-  position: absolute;
-  top: 715px;
-  left: 1011px;
-  width: 909px;
   overflow: hidden;
-}
-
-.slide {
-  width: 365px;
-  
+  position: relative;
 }
 
 .control__buttons {
   display: flex;
   align-items: center;
-  
+  position: absolute;
+  bottom: 42px;
+  right: 50px;
 }
 
 .slider__btn--text {
@@ -270,10 +282,16 @@ button {
   margin-right: 12px;
   box-shadow: 5px 0px 7px #00000029;
   padding: 12px 23px;
-  position: absolute;
-  top: 819px;
-  left: 1567px;
   z-index: 100;
+  transition: all 300ms;
+}
+
+.slider__btn--text:hover {
+  transform: scale(1.1);
+}
+
+.slider__btn--text:active {
+  transform: scale(0.8);
 }
 
 .slider__btn--arrow {
@@ -285,15 +303,114 @@ button {
   color: #0d9206;
   border-radius: 100%;
   border: none;
-  position: absolute;
-  top: 819px;
-left: 1810px;
-z-index: 100;
-  
-
+  z-index: 100;
+  transition: all 300ms;
 }
+
+.slider__btn--arrow:hover {
+  transform: scale(1.1);
+}
+
+.slider__btn--arrow:active {
+  transform: scale(0.8);
+}
+
 
 .fa-arrow-right {
   width: 32px;
   height: 32px;
+}
+
+
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromRight {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+
+/* MOBILE RESPONSIVE*/
+@media (max-width: 420px) {
+  #mekong-tour {
+    flex-direction: column-reverse
+  }
+
+  .tour__info{
+    width: 100%;
+    padding: 0 24px;
+  }
+
+  .tour__socials {
+    width: 100%;
+    padding: 0 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .tour__info--text {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .tour__info--heading {
+    max-width: none;
+    margin: 0;
+    font-size: 60px;
+    text-align: center;
+  }
+
+  .green {
+    font-size: 60px;
+    margin: 0;
+  }
+
+  .tour__socials--img {
+    object-fit: contain;
+    width: 400px;
+  }
+
+  .divider__vertical {
+    bottom: 0;
+    left: 50%;
+    height: 0;
+    width: 200px;
+    transform: translateX(-50%);
+  }
+
+  .grid,  .slider__btn--text{
+    display: none;
+  }
+
+  .window__info, .social__list, .more-trips {
+    position: unset;
+  }
+
+  .window__info {
+    margin-top: 24px;
+  }
+  
+  .social__list {
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 24px;
+  }
+  
+
 }
