--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ button {
 
 #mekong-tour {
   max-width: 1920px;
+  height: 996px;
   margin: 0 auto;
   display: flex;
   
@@ -42,6 +43,9 @@ button {
 .tour__socials {
   width: 50%;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   animation: slideInFromLeft 1s ease-in;;
 }
 
@@ -226,7 +230,7 @@ button {
   background-color: #ff8800;
   color: #ffffff;
   font-size: 27px;
-  margin: 38px 0;
+  margin: 48px 0;
   border: none;
   padding: 12px 44px;
   transition: all 300ms;
@@ -243,19 +247,19 @@ button {
 
 .divider__vertical {
   position: absolute;
-  top: 60%;
+  top: 63%;
   left: 0;
   width: 0px;
   height: 273px;
   border: 2px solid #0d9206;
-  transform: translateY(-60%);
+  transform: translateY(-63%);
 }
 
 .grid {
   position: absolute;
-  top: 60%;
+  top: 40%;
   right: 0;
-  transform: translateY(-60%);
+  transform: translateY(-40%);
 }
 
 
@@ -437,4 +441,13 @@ button {
 .more-trips {
   position: unset;
 }
+}
+
+@media (max-width:1260px) {
+  .green {
+    margin-left: 34px;
+  }
+  .tour__info--subheading {
+    max-width: 60%;
+  }
 }
