--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,6 @@ button {
 
 #mekong-tour {
   max-width: 1920px;
-  height: 996px;
   margin: 0 auto;
   display: flex;
   
@@ -423,6 +422,9 @@ button {
   padding: 0 24px;
 }
 
+.tour__socials {
+  flex-direction: column;
+}
 .tour__info--text {
   margin: 0;
 }
